# rusty-chat

./: .gitignore  Cargo.toml
chat-backend/: Cargo.toml
chat-backend/src/: handlers.rs  main.rs  models.rs  utils.rs
chat-backend/src/handlers/: chat_room.rs  message.rs  user.rs
chat-backend/src/utils/: auth.rs  jwt.rs  token.rs
frontend/: package.json
src/: main.rs  model.rs
