[package]
name = "rusty-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
bson = { version = "2.8.1", features = ["chrono-0_4"] }
chrono = "0.4.31"
mongodb = "2.8.0"
serde = "1.0.193"
tokio  = { version = "1.35.1", features = ["full"] }
